erDiagram
    USERS ||--o{ ATTENDANCE : has
    USERS ||--o{ LEAVE_REQUESTS : applies
    USERS {
        uuid id PK
        string email
        string password
        string full_name
        string role
        string division
    }
    ATTENDANCE {
        uuid id PK
        uuid user_id FK
        datetime check_in_time
        datetime check_out_time
        string status
        string photo_url
        float lat
        float lng
    }
    LEAVE_REQUESTS {
        uuid id PK
        uuid user_id FK
        date start_date
        date end_date
        string reason
        string status
        string type
    }